# telegram-downloader

./: .env.example  .gitignore  CHANGELOG.html  CHANGELOG.md  CLAUDE.md  README.md  UNTRACKED_FILES.md  USER_GUIDE.html  USER_GUIDE.md  pyproject.toml  requirements.txt
src/: __init__.py
src/cli/: main.py
src/core/: __init__.py  client.py  config.py  logger.py  types.py
src/database/: __init__.py  db.py
src/downloader/: __init__.py  downloader.py
src/gui/: __init__.py  app.py  async_bridge.py  main_window.py
src/gui/pages/: __init__.py  downloads_page.py  history_page.py  scheduler_page.py  settings_page.py  subscriptions_page.py
src/gui/widgets/: status_bar.py
src/queue/: __init__.py  download_queue.py
src/resolver/: __init__.py  resolver.py
src/scheduler/: __init__.py  scheduler.py
src/subscription/: __init__.py  manager.py
tests/: test_config.py  test_database.py  test_downloader.py  test_types.py
